--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # on envoie pas le .env dans le repo normalement
 # on le met dans le .gitignore
 
-API_URL=http://localhost:3000
+API_URL=http://192.168.1.132:3000
 MONGODB_URI=mongodb://localhost:27017/Pokedex
 JWT_SECRET=actual_secret_password_for_now
