--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/pokemon-api
-FRONTEND_URL=http://localhost:5173
+MONGODB_URI=mongodb://192.168.1.132:27017/pokemon-api
+FRONTEND_URL=http://192.168.1.132:5173
 JWT_SECRET=votre_secret_super_securise
