authentication jwt fonctionnelle

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
-# on envoie pas le .env dans le repo normalement
-# on le met dans le .gitignore
-
-API_URL=http://192.168.1.132:3000
-MONGODB_URI=mongodb://localhost:27017/Pokedex
-JWT_SECRET=actual_secret_password_for_now
+MONGO_URI=mongodb://localhost:27017/Pokedex
+JWT_SECRET=bonjour_zackaria
+FRONTEND_URL=http://192.168.56.1:5173
+NODE_ENV=development
